# YaneuraOu

./: .gitignore  CMakeLists.txt
docs/: fbsd.txt  mingwtoolchain.cmake
source/: bitboard.h  move_picker.h  movegen.cpp  shogi.cpp  shogi.h  usi.cpp
source/engine/local-game-server/: local-game-server.cpp
source/eval/: evaluate_bona_piece.cpp
source/extra/: bitop.h  config.h
source/old_engines/engines/2016-late-engine/: 2016-late-search.cpp
source/old_engines/engines/2016-mid-engine/: 2016-mid-search.cpp
source/old_engines/engines/2017-early-engine/: 2017-early-search.cpp
source/old_engines/engines/check-shogi-engine/: check-shogi.cpp
source/old_engines/engines/classic-engine/: classic-search.cpp
source/old_engines/engines/classic-tce-engine/: classic-tce-search.cpp
source/old_engines/engines/mini-engine/: mini-search.cpp
source/old_engines/engines/random-player-engine/: random-player-search.cpp
source/old_engines/eval/evaluate_kpp/: evaluate_kpp.cpp
source/old_engines/move_picker/: move_picker_2015.h
